--- a/BadmintonCourtManagement/appsettings.json
+++ b/BadmintonCourtManagement/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.;Initial Catalog=BadmintonCourtDB;Integrated Security=True;Trust Server Certificate=True"
+  },
+  "AppSettings": {
+    "Token": "nG7$kP!z9@Wq3#XvT$eF1pW^kZr*YdC8nB0sJ4uH!xV2rT$eF1pW^kZr*YdC8nB0s", //Secret key: for algorithm HmacSha512: just need 64-character long
+    "Issuer": "MyAwesomeApp",
+    "Audience": "MyAudience" 
   }
 }
