--- a/BadmintonCourtManagement/appsettings.json
+++ b/BadmintonCourtManagement/appsettings.json
@@ -12,6 +12,11 @@
   "AppSettings": {
     "Token": "nG7$kP!z9@Wq3#XvT$eF1pW^kZr*YdC8nB0sJ4uH!xV2rT$eF1pW^kZr*YdC8nB0s", //Secret key: for algorithm HmacSha512: just need 64-character long
     "Issuer": "MyAwesomeApp",
-    "Audience": "MyAudience" 
+    "Audience": "MyAudience"
+  },
+  "Smtp": {
+    "Username": "thanhphongchupanh@gmail.com",
+    "Password": "woxx jufo iktg znxm", //app password for Gmail
+    "From": "thanhphongchupanh@gmail.com"
   }
 }
